Fix overflow workaround

--- a/src/style.css
+++ b/src/style.css
@@ -15,10 +15,6 @@
   margin-inline: 5px;
 }
 
-.viewOverflow {
-  padding-left: calc(var(--widthSidebar) + 25px);
-}
-
 .p-tooltip.p-component.p-tooltip-left { 
   font-size: 0.8em !important;
   max-width: 20em !important;
